<resources>
    <!-- Login page -->
    <string name="login_connecting">Connecting to Google, please wait…</string>
    <string name="login_error">Signing in to Google Drive failed!</string>
    <string name="login_success">Signing in to Google Drive success!</string>

    <!-- Main -->
    <string name="app_name">DriveDemo</string>
    <string name="main_login">Sign in</string>
    <string name="main_get_token">Get token</string>
    <string name="main_refresh_token">Refresh token</string>
    <string name="main_revoke_token">Revoke token</string>
    <string name="main_get_about">Get user info</string>
    <string name="main_search_files">Search files</string>
    <string name="main_list_files">List files</string>
    <string name="main_get_file">Get file</string>
    <string name="main_download_file">Download</string>
    <string name="main_upload_file">Upload</string>
    <string name="main_move_file">Move file</string>
    <string name="main_delete_file">Delete file</string>
</resources>
